@@ -1,3 +1,11 @@
+2006-12-08  Jesus M. Gonzalez-Barahona <jgb@gsyc.escet.urjc.es>
+
+	* generations.py: Simplified and more generic code. Now
+	   periods of an arbitrary number of days are supported,
+	   in addition to quarters. Top fraction of commiters and
+	   arbitrary fraction of commits are also supported.
+	   Small fixes here and there.
+
 2006-12-06  Jesus M. Gonzalez-Barahona <jgb@gsyc.escet.urjc.es>
 
 	* generations.py: Simplified and more generic code. Now
